--- a/frontend/src/pages/guest/Banner.scss
+++ b/frontend/src/pages/guest/Banner.scss
@@ -3,24 +3,30 @@
 
 .banner {
   display: flex;
-  justify-content: space-between;
   border-bottom: 1px solid #212121;
   padding-bottom: 10px;
   background-color: $yellow-color;
-  position: relative;
-  top: 0;
-  left: 0;
-  /* z-index: -1; */
+  height: 540px;
+  width: 100%;
 }
+
+.bannerContainer {
+  padding: 0 60px;
+  overflow: hidden;
+}
+
 .banner > div {
-  padding-top: 167px;
-  padding-left: 65px;
+  padding-top: 79px;
+}
+
+.bannerSvg svg {
 }
 
 .banner > div h1 {
+  padding-top: 50px;
   letter-spacing: -0.05em;
   line-height: 95px;
-  font-size: 110px;
+  font-size: 104px;
   font-family: 'Times New Roman', Times, serif;
   padding-bottom: 30px;
   color: black;
